--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@next/font": "13.2.4",
     "ethers": "^5.7.2",
     "hardhat": "^2.13.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
