--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^13.5.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
