--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.2.4",
+    "dotenv": "^17.2.1",
     "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
     "next": "^13.5.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "autoprefixer": "^10.4.14",
+    "hardhat": "^2.26.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
